--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accessible Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Navigation Bar -->
+    <nav role="navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#home">Home</a></li>
+            <li role="listitem"><a href="#about">About</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <header>
+        <h1 role="heading">My Accessible Portfolio</h1>
+    </header>
+
+    <section>
+        <img src="your-image.jpg" alt="A brief description of the image" role="img">
+        <p>Welcome to my portfolio! I am a web developer with a passion for creating accessible web applications.</p>
+    </section>
+
+    <!-- List of Projects -->
+    <section>
+        <h2 role="heading">Projects</h2>
+        <ul role="list">
+            <li role="listitem">Project One: Description of project one.</li>
+            <li role="listitem">Project Two: Description of project two.</li>
+            <li role="listitem">Project Three: Description of project three.</li>
+        </ul>
+    </section>
 
 </body>
+
+</html>
+
 
 </html>
